[gd_scene load_steps=13 format=2]

[ext_resource path="res://map/map.tres" type="TileSet" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemy/enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/TambahPeluru.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/font/GloriaHallelujah-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://level/level2.gd" type="Script" id=6]
[ext_resource path="res://UI/Heart_Bar.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/portal.tscn" type="PackedScene" id=8]
[ext_resource path="res://menu/popup.tscn" type="PackedScene" id=9]
[ext_resource path="res://menu/popup_dead.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="level2" type="Node2D"]
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -987.0
margin_top = -272.0
margin_right = 1973.0
margin_bottom = 971.0
color = Color( 0.215686, 0.00784314, 0.00784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 39, 39 )
format = 1
tile_data = PoolIntArray( -65544, 0, 0, -65543, 0, 0, -65542, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -131055, 0, 0, -131054, 0, 0, -131053, 0, 0, -131052, 0, 0, -131051, 0, 0, -131050, 0, 0, -131049, 0, 0, -131048, 0, 0, -131047, 0, 0, -131046, 0, 0, -131045, 0, 0, -131044, 0, 0, -131043, 0, 0, -131042, 0, 0, -131041, 0, 0, -131040, 0, 0, -131039, 0, 0, -131038, 0, 0, -131037, 0, 0, -8, 0, 0, -65509, 0, 0, -65501, 0, 0, 65528, 0, 0, 27, 0, 0, 35, 0, 0, 131064, 0, 0, 131069, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65559, 0, 0, 65563, 0, 0, 65571, 0, 0, 196600, 0, 0, 196605, 0, 0, 131095, 0, 0, 131099, 0, 0, 131107, 0, 0, 262136, 0, 0, 262141, 0, 0, 196631, 0, 0, 196635, 0, 0, 196643, 0, 0, 327672, 0, 0, 327677, 0, 0, 262167, 0, 0, 262171, 0, 0, 262179, 0, 0, 393208, 0, 0, 393213, 0, 0, 327685, 0, 0, 327703, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327715, 0, 0, 458744, 0, 0, 458749, 0, 0, 393221, 0, 0, 393239, 0, 0, 393251, 0, 0, 524280, 0, 0, 524285, 0, 0, 458757, 0, 0, 458775, 0, 0, 458787, 0, 0, 589816, 0, 0, 524293, 0, 0, 524311, 0, 0, 524323, 0, 0, 655352, 0, 0, 589829, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589859, 0, 0, 720888, 0, 0, 655365, 0, 0, 655395, 0, 0, 786424, 0, 0, 786429, 0, 0, 720901, 0, 0, 720931, 0, 0, 851960, 0, 0, 851965, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786467, 0, 0, 917496, 0, 0, 917501, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 852003, 0, 0, 983032, 0, 0, 983037, 0, 0, 917527, 0, 0, 917539, 0, 0, 1048568, 0, 0, 1048573, 0, 0, 983063, 0, 0, 983075, 0, 0, 1114104, 0, 0, 1114109, 0, 0, 1048599, 0, 0, 1048611, 0, 0, 1179640, 0, 0, 1179645, 0, 0, 1179646, 0, 0, 1179647, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114135, 0, 0, 1114147, 0, 0, 1245176, 0, 0, 1179683, 0, 0, 1310712, 0, 0, 1245219, 0, 0, 1376248, 0, 0, 1376249, 0, 0, 1376250, 0, 0, 1376251, 0, 0, 1376252, 0, 0, 1376253, 0, 0, 1376254, 0, 0, 1376255, 0, 0, 1310720, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310733, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0, 1310741, 0, 0, 1310742, 0, 0, 1310743, 0, 0, 1310744, 0, 0, 1310745, 0, 0, 1310746, 0, 0, 1310747, 0, 0, 1310748, 0, 0, 1310749, 0, 0, 1310750, 0, 0, 1310751, 0, 0, 1310752, 0, 0, 1310753, 0, 0, 1310754, 0, 0, 1310755, 0, 0 )

[node name="portal" parent="." instance=ExtResource( 8 )]
position = Vector2( 1184, 64 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( -208, 648 )
speed = 120

[node name="enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 320, 400 )

[node name="enemy2" parent="." instance=ExtResource( 3 )]
position = Vector2( 112, 176 )

[node name="enemy3" parent="." instance=ExtResource( 3 )]
position = Vector2( 792, 56 )

[node name="TambahPeluru" parent="." instance=ExtResource( 4 )]
position = Vector2( 521.987, 215.691 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Heart_Bar" parent="CanvasLayer" instance=ExtResource( 7 )]
margin_left = 33.0
margin_top = 27.0
margin_right = 73.0
margin_bottom = 67.0

[node name="bullet" type="Label" parent="CanvasLayer"]
margin_left = 226.0
margin_top = 17.0
margin_right = 330.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "Bullet: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="popup_win" parent="CanvasLayer" instance=ExtResource( 9 )]
visible = false
margin_left = -2.0
margin_right = 498.0

[node name="popup_dead" parent="CanvasLayer" instance=ExtResource( 10 )]
visible = false
margin_left = 518.0
margin_right = 1018.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
pause_mode = 2
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
pause_mode = 2
anims/fade = SubResource( 2 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
[connection signal="menang" from="portal" to="." method="menang"]
[connection signal="mati" from="player" to="CanvasLayer/Heart_Bar" method="_on_player_mati"]
[connection signal="nembak" from="player" to="." method="_on_player_nembak"]
[connection signal="isi_peluru" from="TambahPeluru" to="." method="_on_TambahPeluru_isi_peluru"]
[connection signal="isi_peluru" from="TambahPeluru" to="player" method="_on_TambahPeluru_isi_peluru"]
[connection signal="dead" from="CanvasLayer/Heart_Bar" to="." method="dead"]
[connection signal="main_menu" from="CanvasLayer/popup_win" to="." method="main_menu"]
[connection signal="next_stage" from="CanvasLayer/popup_win" to="." method="next_stage"]
[connection signal="main_menu" from="CanvasLayer/popup_dead" to="." method="main_menu"]
[connection signal="retry" from="CanvasLayer/popup_dead" to="." method="retry"]
[connection signal="animation_finished" from="CanvasLayer/AnimationPlayer" to="." method="animasi_finish"]
